--- a/hip/CMakeLists.txt
+++ b/hip/CMakeLists.txt
@@ -100,6 +100,7 @@ endif()
 set(GINKGO_HIP_SOURCES
     base/exception.hip.cpp
     base/executor.hip.cpp
+    base/memory_space.hip.cpp
     base/version.hip.cpp
     components/prefix_sum.hip.cpp
     components/zero_array_kernels.hip.cpp
