--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(ginkgo
         matrix/sellp.cpp
         matrix/sparsity_csr.cpp
         preconditioner/jacobi.cpp
+        reorder/rcm.cpp
         solver/bicg.cpp
         solver/bicgstab.cpp
         solver/cg.cpp
