Add METIS fill reduce ordering.

--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -79,6 +79,7 @@ target_sources(ginkgo_cuda
         preconditioner/jacobi_generate_kernel.cu
         preconditioner/jacobi_kernels.cu
         preconditioner/jacobi_simple_apply_kernel.cu
+        reorder/metis_fill_reduce_kernels.cu
         reorder/rcm_kernels.cu
         solver/bicg_kernels.cu
         solver/bicgstab_kernels.cu
@@ -115,6 +116,10 @@ target_link_libraries(ginkgo_cuda PRIVATE ${CUDA_LIBS} ${CUDA_RUNTIME_LIBS} ${CU
 
 # Need to link against ginkgo_hip for the `raw_copy_to(HipExecutor ...)` method
 target_link_libraries(ginkgo_cuda PUBLIC ginkgo_hip)
+if (GINKGO_HAVE_METIS)
+  target_link_libraries(ginkgo_cuda PUBLIC METIS::METIS)
+  # target_include_directories(ginkgo_cuda PRIVATE ${METIS_INCLUDE_DIR})
+endif()
 
 cas_target_cuda_architectures(ginkgo_cuda
     ARCHITECTURES ${GINKGO_CUDA_ARCHITECTURES}
