--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ option(GINKGO_EXPORT_BUILD_DIR
     "Make Ginkgo export its build directory to the CMake package registry."
     OFF)
 option(GINKGO_WITH_HWLOC "Add support for the Hardware Locality module from Open-MPI" OFF)
+option(GINKGO_WITH_METIS "Allow interfacing and usage of the Metis graph partitioning and matrix re-ordering library" OFF)
 option(GINKGO_WITH_CLANG_TIDY "Make Ginkgo call `clang-tidy` to find programming issues." OFF)
 option(GINKGO_WITH_IWYU "Make Ginkgo call `iwyu` (Include What You Use) to find include issues." OFF)
 set(GINKGO_VERBOSE_LEVEL "1" CACHE STRING
@@ -154,6 +155,14 @@ if(GINKGO_WITH_HWLOC)
   set(GKO_HWLOC_XMLFILE "${HWLOC_XMLFILE}")
   if(HWLOC_FOUND)
     set(GINKGO_HAVE_HWLOC 1)
+  endif()
+endif()
+
+set(GINKGO_HAVE_METIS 0)
+if (GINKGO_WITH_METIS)
+  find_package(METIS REQUIRED)
+  if (METIS_FOUND)
+    set(GINKGO_HAVE_METIS 1)
   endif()
 endif()
 
