--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(ginkgo
         matrix/sellp.cpp
         matrix/sparsity_csr.cpp
         preconditioner/jacobi.cpp
+        reorder/metis_fill_reduce.cpp
         reorder/rcm.cpp
         solver/bicg.cpp
         solver/bicgstab.cpp
@@ -63,6 +64,11 @@ target_link_libraries(ginkgo
 if (GINKGO_HAVE_PAPI_SDE)
     target_link_libraries(ginkgo PRIVATE PAPI::PAPI)
 endif()
+
+if (GINKGO_HAVE_METIS)
+  target_link_libraries(ginkgo PRIVATE METIS::METIS)
+endif()
+
 ginkgo_default_includes(ginkgo)
 ginkgo_install_library(ginkgo core)
 
