--- a/hip/CMakeLists.txt
+++ b/hip/CMakeLists.txt
@@ -116,6 +116,7 @@ set(GINKGO_HIP_SOURCES
     preconditioner/jacobi_generate_kernel.hip.cpp
     preconditioner/jacobi_kernels.hip.cpp
     preconditioner/jacobi_simple_apply_kernel.hip.cpp
+    reorder/metis_fill_reduce_kernels.hip.cpp
     reorder/rcm_kernels.hip.cpp
     solver/bicg_kernels.hip.cpp
     solver/bicgstab_kernels.hip.cpp
@@ -200,6 +201,10 @@ target_include_directories(ginkgo_hip
         ${HIPBLAS_INCLUDE_DIRS}
         ${HIPSPARSE_INCLUDE_DIRS}
         $<BUILD_INTERFACE:${ROCPRIM_INCLUDE_DIRS}>)
+
+if (GINKGO_HAVE_METIS)
+  target_link_libraries(ginkgo_hip PRIVATE METIS::METIS)
+endif()
 
 ginkgo_compile_features(ginkgo_hip)
 ginkgo_default_includes(ginkgo_hip)
