--- a/reference/CMakeLists.txt
+++ b/reference/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(ginkgo_reference
         matrix/sellp_kernels.cpp
         matrix/sparsity_csr_kernels.cpp
         preconditioner/jacobi_kernels.cpp
+        reorder/metis_fill_reduce_kernels.cpp
         reorder/rcm_kernels.cpp
         solver/bicg_kernels.cpp
         solver/bicgstab_kernels.cpp
@@ -30,6 +31,10 @@ ginkgo_compile_features(ginkgo_reference)
 ginkgo_default_includes(ginkgo_reference)
 ginkgo_install_library(ginkgo_reference reference)
 target_compile_options(ginkgo_reference PRIVATE "${GINKGO_COMPILER_FLAGS}")
+
+if (GINKGO_HAVE_METIS)
+  target_link_libraries(ginkgo_reference PRIVATE METIS::METIS)
+endif()
 
 if(GINKGO_BUILD_TESTS)
     add_subdirectory(test)
