--- a/hip/CMakeLists.txt
+++ b/hip/CMakeLists.txt
@@ -107,6 +107,7 @@ set(GINKGO_HIP_SOURCES
     factorization/factorization_kernels.hip.cpp
     factorization/par_ilu_kernels.hip.cpp
     factorization/par_ilut_select_kernel.hip.cpp
+    factorization/par_ilut_select_common.hip.cpp
     factorization/par_ilut_approx_filter_kernel.hip.cpp
     factorization/par_ilut_filter_kernel.hip.cpp
     factorization/par_ilut_spgeam_kernel.hip.cpp
