--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,9 @@ stages:
 # Templates with reasonable defaults for builds and tests
 .variables_template: &default_variables
   BENCHMARK_SERVER: "FINECI"
-  C_COMPILER: gcc
-  CXX_COMPILER: g++
-  BUILD_TYPE: Debug
+  C_COMPILER: "gcc"
+  CXX_COMPILER: "/usr/bin/g++"
+  BUILD_TYPE: "Debug"
   BUILD_SHARED_LIBS: "ON"
   BUILD_REFERENCE: "ON"
   BUILD_OMP: "OFF"
@@ -65,6 +65,19 @@ stages:
   before_script: *default_before_script
   script:
     - mkdir -p ${CI_JOB_NAME} && cd ${CI_JOB_NAME}
+    - env
+    - echo "CI JOB NAME ${CI_JOB_NAME}"
+    - echo "EXTRA CMAKE FLAGS ${EXTRA_CMAKE_FLAGS}"
+    - echo "CXX COMPILER ${CXX_COMPILER}"
+    - echo "PATH ${PATH}"
+    - echo "CMAKE Command cmake ${CI_PROJECT_DIR}
+        -DCMAKE_C_COMPILER=${C_COMPILER} -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
+        -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_CXX_FLAGS=\"${CXX_FLAGS}\"
+        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} ${EXTRA_CMAKE_FLAGS}
+        -DGINKGO_DEVEL_TOOLS=OFF -DGINKGO_BUILD_REFERENCE=${BUILD_REFERENCE}
+        -DGINKGO_BUILD_OMP=${BUILD_OMP} -DGINKGO_BUILD_CUDA=${BUILD_CUDA}
+        -DGINKGO_BUILD_HIP=${BUILD_HIP}
+        -DGINKGO_BUILD_TESTS=ON -DGINKGO_BUILD_EXAMPLES=ON"
     - cmake ${CI_PROJECT_DIR}
         -DCMAKE_C_COMPILER=${C_COMPILER} -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
         -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_CXX_FLAGS="${CXX_FLAGS}"
@@ -115,9 +128,9 @@ build/cuda90/gcc/all/debug/shared:
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     EXTRA_CMAKE_FLAGS: &cuda_flags
-      "-DGINKGO_CUDA_ARCHITECTURES=35 -DCMAKE_CUDA_HOST_COMPILER=$(which ${CXX_COMPILER})"
+      "-DGINKGO_CUDA_ARCHITECTURES=35 -DCMAKE_CUDA_HOST_COMPILER=``which ${CXX_COMPILER}`"
   tags:
     - private_ci
     - cuda
@@ -128,12 +141,12 @@ build/cuda90/clang/all/release/static:
   image: localhost:5000/gko-cuda90-gnu5-llvm39
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_SHARED_LIBS: "OFF"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
@@ -150,7 +163,7 @@ build/cuda91/gcc/all/debug/static:
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     BUILD_SHARED_LIBS: "OFF"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
@@ -163,12 +176,12 @@ build/cuda91/clang/all/release/shared:
   image: localhost:5000/gko-cuda91-gnu6-llvm40
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -185,7 +198,7 @@ build/cuda92/gcc/all/release/shared:
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -197,12 +210,12 @@ build/cuda92/clang/all/debug/static:
   image: localhost:5000/gko-cuda92-gnu7-llvm50-intel2017
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     BUILD_SHARED_LIBS: "OFF"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
@@ -215,11 +228,11 @@ build/cuda92/intel/cuda/release/static:
   image: localhost:5000/gko-cuda92-gnu7-llvm50-intel2017
   variables:
     <<: *default_variables
-    C_COMPILER: icc
-    CXX_COMPILER: icpc
+    C_COMPILER: "icc"
+    CXX_COMPILER: "icpc"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_SHARED_LIBS: "OFF"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
@@ -236,7 +249,7 @@ build/cuda100/gcc/all/debug/shared:
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -248,12 +261,12 @@ build/cuda100/clang/all/release/static:
   image: localhost:5000/gko-cuda100-gnu7-llvm60-intel2018
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_SHARED_LIBS: "OFF"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
@@ -266,11 +279,11 @@ build/cuda100/intel/cuda/release/shared:
   image: localhost:5000/gko-cuda100-gnu7-llvm60-intel2018
   variables:
     <<: *default_variables
-    C_COMPILER: icc
-    CXX_COMPILER: icpc
+    C_COMPILER: "icc"
+    CXX_COMPILER: "icpc"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -286,7 +299,7 @@ build/cuda101/gcc/all/debug/shared:
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -298,12 +311,12 @@ build/cuda101/clang/all/release/static:
   image: localhost:5000/gko-cuda101-gnu8-llvm7-intel2019
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -315,11 +328,11 @@ build/cuda101/intel/cuda/debug/static:
   image: localhost:5000/gko-cuda101-gnu8-llvm7-intel2019
   variables:
     <<: *default_variables
-    C_COMPILER: icc
-    CXX_COMPILER: icpc
+    C_COMPILER: "icc"
+    CXX_COMPILER: "icpc"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     EXTRA_CMAKE_FLAGS: *cuda_flags
   tags:
     - private_ci
@@ -334,7 +347,7 @@ build/amd/gcc/hip/debug/shared:
     <<: *default_variables
     BUILD_OMP: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
   tags:
     - private_ci
     - amd
@@ -345,11 +358,11 @@ build/amd/clang/hip/release/static:
   image: localhost:5000/gko-amd-gnu7-llvm60
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
     BUILD_HIP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_SHARED_LIBS: "OFF"
   tags:
     - private_ci
@@ -363,7 +376,7 @@ build/nocuda/gcc/core/debug/static:
   variables:
     <<: *default_variables
     BUILD_REFERENCE: "OFF"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     BUILD_SHARED_LIBS: "OFF"
   tags:
     - private_ci
@@ -374,10 +387,10 @@ build/nocuda/clang/core/release/shared:
   image: localhost:5000/gko-nocuda-gnu9-llvm8
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_REFERENCE: "OFF"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
   tags:
     - private_ci
     - cpu
@@ -387,10 +400,10 @@ build/nocuda/intel/core/debug/shared:
   image: localhost:5000/gko-nocuda-gnu9-llvm8
   variables:
     <<: *default_variables
-    C_COMPILER: icc
-    CXX_COMPILER: icpc
+    C_COMPILER: "icc"
+    CXX_COMPILER: "icpc"
     BUILD_REFERENCE: "OFF"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
   tags:
     - private_ci
     - cuda
@@ -402,7 +415,7 @@ build/nocuda/gcc/omp/release/shared:
   variables:
     <<: *default_variables
     BUILD_OMP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
   tags:
     - private_ci
     - cpu
@@ -412,10 +425,10 @@ build/nocuda/clang/omp/debug/static:
   image: localhost:5000/gko-nocuda-gnu9-llvm8
   variables:
     <<: *default_variables
-    C_COMPILER: clang
-    CXX_COMPILER: clang++
+    C_COMPILER: "clang"
+    CXX_COMPILER: "clang++"
     BUILD_OMP: "ON"
-    BUILD_TYPE: Debug
+    BUILD_TYPE: "Debug"
     BUILD_SHARED_LIBS: "OFF"
   tags:
     - private_ci
@@ -426,10 +439,10 @@ build/nocuda/intel/omp/release/static:
   image: localhost:5000/gko-nocuda-gnu9-llvm8
   variables:
     <<: *default_variables
-    C_COMPILER: icc
-    CXX_COMPILER: icpc
+    C_COMPILER: "icc"
+    CXX_COMPILER: "icpc"
     BUILD_OMP: "ON"
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_SHARED_LIBS: "OFF"
   tags:
     - private_ci
@@ -752,7 +765,7 @@ fineci-benchmark-build:
   variables:
     <<: *default_variables
     BENCHMARK_SERVER: FINECI
-    BUILD_TYPE: Release
+    BUILD_TYPE: "Release"
     BUILD_OMP: "ON"
     BUILD_CUDA: "ON"
     PUBLIC_REPO: https://github.com/ginkgo-project/ginkgo.git
